<resources>
    <string name="app_name">Animall</string>
    <string name="home">Home</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="animal_conversation">Community</string>
    <string name="animal_doctor">Doctor</string>
    <string name="buy_animal">Buy Animal</string>
    <string name="sell_animal">Sell Animal</string>
    <string name="other_services">Other Services</string>
    <string name="health">Health</string>
    <string name="animal_scanner">Cattle Scanner and\n Health</string>
    <string name="conversation_on_animal">Discuss about\n Animals</string>
    <string name="wallet">Wallet</string>
    <string name="all_animal">All Animal</string>
    <string name="prime_animal">Prime Animal</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="bachiya">Bachiya</string>
    <string name="paadi">Paadi</string>
    <string name="bull">Bull</string>
    <string name="language">English</string>
    <string name="customer_care">Customer Care</string>
    <string name="your_selling_animal">Your Animal</string>
    <string name="which_animal">What do you want to sell? *</string>
    <string name="select_animal">Select Animal</string>
    <string name="breed">Breed *</string>
    <string name="select_breed">Select Breed</string>
    <string name="lactation">Lactation *</string>
    <string name="select_lactation">Select Pregnancy</string>
    <string name="current_milk">Current Milk (Per Day) *</string>
    <string name="milk_capacity">Milk Capacity (Per Day) *</string>
    <string name="milk_hint">10 litres</string>
    <string name="price">Price *</string>
    <string name="price_hint">30000</string>
    <string name="is_negotiable">Is this price negotiable?</string>
    <string name="click_atleast_one">Upload your animal\'s photo/video (minimum 1) *</string>
    <string name="select_video">Select Video</string>
    <string name="select_photo">Select Photo</string>
    <string name="click_below_for_more_info">Click below for more information</string>
    <string name="has_baby">Has the pashu delivered baby?</string>
    <string name="select_delivery_status">Select delivery status</string>
    <string name="is_pregnant">Is it pregnant?</string>
    <string name="choose_pregnancy_status">Choose Pregnancy Status</string>
    <string name="is_calf_with_animal">Is there a calf with the animal?</string>
    <string name="select">Select</string>
    <string name="submit_animal">Submit</string>
    <string name="more_information">More information</string>
    <string name="animal_more_info">Like have an injury? How pure is the breed? And so on</string>
    <string name="post_about_animal">Write about your cattle here</string>
    <string name="join_us">Join Us</string>
    <string name="near">Near</string>
    <string name="experience">More experience</string>
    <string name="animal_treatment">Animal Treatment</string>
    <string name="profile">Profile</string>
    <string name="share">Share with friends</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="enter_here">Enter here..</string>

    <string name="delete">Delete</string>

    <string name="no_animal">कोई पशु नहीं है|</string>
    <string name="see_your_animal">अपने पशु देखे</string>
    <string name="your_animal">Your Animal</string>
    <string name="total_coin">Total Coin</string>
    <string name="add_coin">Add More Coins</string>
    <string name="available_coin">Total Amount Available</string>
    <string name="select_option">Select Options 👇</string>
    <string name="animal_for_you">Animal For You</string>
    <string name="according_choice">According to Choice</string>
    <string name="selected_animal">Selected Animal</string>
    <string name="search_according_you">Search Animal According to you</string>
    <string name="type_of_animal">Type of Animal *</string>
    <string name="within_price">Within what price? *</string>
    <string name="mandatory_location">Location information is essential to see nearby animals</string>
    <string name="location_permission_title">See animals nearby! Allow your location to be seen</string>
    <string name="give_location">Allow Permission</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="whatsapp_no">WhatsApp No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="birthday">Birthday</string>
    <string name="no_of_animal">Number of Animals</string>
    <string name="work">Profession</string>
    <string name="year_of_husbandry">How many years of animal husbandry?</string>
    <string name="why_use_app">Why do you use the Animall App?</string>
    <string name="education_level">What is your education level?</string>
    <string name="submit">Submit</string>
    <string name="write_something">Write something about your cattle here!</string>
    <string name="write_your_post">Write your post</string>
    <string name="new_post">New Post</string>
    <string name="select_image_jpg_png">Select Image (jpg, png)</string>
    <string name="year_experience">years experience</string>
    <string name="proceed">Continue</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_sent_to">OTP sent to </string>
    <string name="change_no">Change Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="see_wallet">See Wallet</string>

    <string-array name="choose_lang">
        <item>Hindi</item>
        <item>English</item>
    </string-array>

    <string-array name="lactation_option">
        <item>No lactation (0)</item>
        <item>First (1)</item>
        <item>Second (2)</item>
        <item>Third (3)</item>
        <item>Fourth (4)</item>
        <item>Fifth (5)</item>
        <item>Sixth (6)</item>
        <item>Seventh (7)</item>
    </string-array>

    <string-array name="time_duration">
        <item>This week</item>
        <item>1 week ago</item>
        <item>2 week ago</item>
        <item>3 week ago</item>
        <item>1 month ago</item>
        <item>2 month ago</item>
        <item>3 month ago</item>
        <item>4 month ago</item>
        <item>5 month ago</item>
        <item>6 month ago</item>
        <item>1 year ago</item>
        <item>1.5 year ago</item>
        <item>More than 2 year ago</item>
    </string-array>

    <string-array name="pregnant_time">
        <item>1 month pregnant</item>
        <item>2 months pregnant</item>
        <item>3 months pregnant</item>
        <item>4 months pregnant</item>
        <item>5 months pregnant</item>
        <item>6 months pregnant</item>
        <item>7 months pregnant</item>
        <item>8 months pregnant</item>
        <item>9 months pregnant</item>
    </string-array>

    <string-array name="calf_option">
        <item>Select</item>
        <item>Male Calf</item>
        <item>Female Calf</item>
        <item>No Calf</item>
    </string-array>

    <string-array name="yes_no_option">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="term_and_condition">खाता बनाकर आप हमारी <u> सेवा की शर्तों (Terms of Service)</u> और <u>गोपनीयता नीति (Privacy Policy)</u> से सहमत होते हैं।</string>
    <string name="mobile_invalid_msg">Invalid Number 👆</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_title">Language</string>
</resources>