<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_20sdp"
    android:scrollbars="none"
    tools:context=".fragments.SellAnimalFormFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/which_animal"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_field_bg"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_dropdown"
                    android:editable="false"
                    android:hint="@string/select_animal"
                    android:inputType="none" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breed"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_field_bg"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_dropdown"
                    android:editable="false"
                    android:hint="@string/select_breed"
                    android:inputType="none" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lactation"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_field_bg"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_dropdown"
                    android:editable="false"
                    android:hint="@string/select_lactation"
                    android:inputType="none" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_milk"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_field_bg"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/milk_hint"
                    android:inputType="number" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="30000"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_capacity"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_field_bg"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/milk_hint"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_field_bg"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/price_hint"
                    android:inputType="number" />

            </LinearLayout>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_negotiable"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_atleast_one"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/CustomTitleStyle"/>

            <LinearLayout
                android:background="@drawable/custom_media_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    app:tint="#6E6666"
                    android:src="@drawable/ic_video"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_video"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/custom_btn_bg"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginHorizontal="@dimen/_20sdp">

                <LinearLayout
                    android:background="@drawable/custom_media_bg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        app:tint="#B2ABAB"
                        android:src="@drawable/ic_camera"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_photo"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_btn_bg"/>

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:background="@drawable/custom_media_bg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        app:tint="#B2ABAB"
                        android:src="@drawable/ic_camera"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_photo"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_btn_bg"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_hide_more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FDF3DD"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/click_below_for_more_info"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_dropdown"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/fill_more_info_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/has_baby"
                    android:layout_marginTop="@dimen/_10sdp"
                    style="@style/CustomTitleStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/custom_field_bg"
                    android:padding="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:editable="false"
                        android:hint="@string/select_delivery_status"
                        android:inputType="none" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_pregnant"
                    android:layout_marginTop="@dimen/_10sdp"
                    style="@style/CustomTitleStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/custom_field_bg"
                    android:padding="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:editable="false"
                        android:hint="@string/choose_pregnancy_status"
                        android:inputType="none" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_calf_with_animal"
                    android:layout_marginTop="@dimen/_10sdp"
                    style="@style/CustomTitleStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/custom_field_bg"
                    android:padding="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:editable="false"
                        android:hint="@string/select"
                        android:inputType="none" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_information"
                    android:layout_marginTop="@dimen/_10sdp"
                    style="@style/CustomTitleStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="top"
                    android:background="@drawable/custom_field_bg"
                    android:padding="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:hint="@string/animal_more_info"
                        android:inputType="text"
                        android:maxLines="3"
                        android:maxHeight="@dimen/_50sdp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/sub_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_animal"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginVertical="@dimen/_25sdp"
                    android:background="@drawable/custom_btn_bg"
                    />

            </LinearLayout>

        </LinearLayout>


</ScrollView>