<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/bottom_sheet"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:background="@color/white">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/close"
                android:layout_gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/type_of_animal"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/type_rec_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/breed"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/breed_rec_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/milk_capacity"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/milk_rec_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lactation"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/lactation_rec_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/within_price"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_your_animal"
                android:textColor="@color/white"
                android:layout_marginVertical="@dimen/_10sdp"
                android:backgroundTint="@color/primary"
                />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>