<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".signup.NameActivity">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/img_welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/enter_your_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#12746D"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/name"
            android:hint="@string/enter_here"
            android:layout_margin="0dp"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="#A7A1A8"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/validation_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:textColor="#CD0000"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/enter_your_name"/>

    <Button
        android:id="@+id/proceed_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_25sdp"
        android:text="@string/proceed"
        style="@style/SubmitBtnStyle"/>

</LinearLayout>